--- a/CS310/divtags/templates/divtags/sandbox.html
+++ b/CS310/divtags/templates/divtags/sandbox.html
@@ -7,9 +7,9 @@
 	
 	</head>
 	<body>
-		<div class="container">
-			<h1 class="element" id="1" onclick="selectElement(this.id)">This is a sandbox application</h1>
-			<p class="element" id="2" onclick="selectElement(this.id)">Use offset of mouse position before and after to get position of drag and drop</p>
+		<div class="container" id="outer-container">
+			<!-- <h1 class="element" id="1" onclick="selectElement(this.id)">This is a sandbox application</h1>
+			<p class="element" id="2" onclick="selectElement(this.id)">Use offset of mouse position before and after to get position of drag and drop</p> -->
 		</div>
 		<div class="element-editor" id="element-editor" style="display:none;">
 			<h4>Position</h4>
