--- a/CS310/divtags/static/divtags/css/sandbox.css
+++ b/CS310/divtags/static/divtags/css/sandbox.css
@@ -7,7 +7,7 @@
 
 .selected-element {
 	border: 1px solid black;
-	cursor: move;
+	cursor: text !important;
 	position: relative;
 /*	resize: both;
 	overflow: auto;
@@ -57,16 +57,15 @@
 }
 
 .element {
-	color:red;
 	cursor: pointer;
-	position: fixed;
+	position: absolute;
 }
 
 .element-editor {
 	position: absolute;
 	top: 20px;
 	right: 20px;
-	width: 100px;
+	width: 150px;
 	background-color: #d9d9d9;
 }
 
