--- a/CS310/divtags/templates/divtags/project-content.html
+++ b/CS310/divtags/templates/divtags/project-content.html
@@ -1,3 +1,27 @@
 {% load static %}
 
-<iframe src="{% url 'divtags:sandbox' %}" style="width:100%; height:100%;"></iframe>
+<!-- <iframe src="{% url 'divtags:sandbox' %}" style="width:100%; height:100%;"></iframe> -->
+
+<div class="container" id="outer-container">
+
+</div>
+<input id="page-identifier" value="0" type="hidden">
+<div class="element-editor" id="element-editor" style="display:none;">
+	<h4>Position</h4>
+	<p>Top: <span id="element-position-top"></span> px</p>
+	<p>Left: <span id="element-position-left"></span> px</p>
+	
+	<h4>Size</h4>
+	<p>Width: <span id="element-size-width"></span> px</p>
+	<p>Height: <span id="element-size-height"></span> px</p>
+	
+	<h4>Padding</h4>
+	<p>Top: <input class="element-padding" id="element-padding-top" placeholder="Top" value="0"/> px</p>
+	<p>Right: <input class="element-padding" id="element-padding-right" placeholder="Right" value="0"/> px</p>
+	<p>Bottom: <input class="element-padding" id="element-padding-bottom" placeholder="Bottom" value="0"/> px</p>
+	<p>Left: <input class="element-padding" id="element-padding-left" placeholder="Left" value="0"/> px</p>
+	
+	<h4>Colour</h4>
+	<p>Text colour: <span id="element-size-width"></span></p>
+	<p>Background colour: <span id="element-size-height"></span></p>
+</div>
