--- a/CS310/divtags/templates/divtags/project.html
+++ b/CS310/divtags/templates/divtags/project.html
@@ -5,11 +5,14 @@
 <div id="toolbar" class="toolbar-left">
 	<nav class="vertical-top" style="margin-top: 60px;">
 		<ul>
+			<li id="undo-change" style="display: none;"><a onclick="undoChange()"><i class="icon-line2-action-undo"></i><span>Undo</span></a></li>
+			<li id="redo-change" style="display: none;"><a onclick="redoChange()"><i class="icon-line2-action-redo"></i><span>Redo</span></a></li>
 			<li id="back-to-edit" style="display:none;"><a><i class="icon-caret-left"></i><span>Back to Edit</span></a></li>
 			<li id="components-button"><a><i class="icon-code side-panel-trigger"></i><span>Components</span></a></li>
 			<li id="object-button"><a><i class="icon-table"></i><span>Manage Objects</span></a></li>
 			<li id="workflow-button"><a><i class="icon-sitemap"></i><span>Workflow Editor</span></a></li>
 			<li id="settings-side-button"><a><i class="icon-settings2"></i><span>Project Settings</span></a></li>
+			<li id="history-button"><a><i class="icon-book2"></i><span>Application History</span></a></li>
 		</ul>
 	</nav>
 </div>
@@ -28,7 +31,7 @@
 
 				<nav class="nav-tree nobottommargin">
 					<ul>
-						<li><a href="#"><i class="icon-line-box"></i>&nbsp;Container</a></li>
+						<li><a href="#" onclick="addContainer(event);"><i class="icon-line-box"></i>&nbsp;Container</a></li>
 						<li><a href="#"><i class="icon-list-ul"></i>&nbsp;Bulleted List</a></li>
 						<li><a href="#"><i class="icon-list-ol"></i>&nbsp;Numbered List</a></li>
 						<li><a href="#"><i class="">h1</i>&nbsp;Heading</a></li>
@@ -73,8 +76,15 @@
 		</div>
 	</div>
 	
+	<div class="container project-tab" id="history-tab">
+		<div class="project-settings container">
+			{% include "./project-history.html" %}
+		</div>
+	</div>
+	
 {% endblock %}
 
 {% block scripts %}
 <script type="text/javascript" src="{% static 'divtags/js/project-scripts.js' %}"></script>
+<script type="text/javascript" src="{% static 'divtags/js/sandbox.js' %}"></script>
 {% endblock %}
