--- a/CS310/divtags/templates/divtags/project-content.html
+++ b/CS310/divtags/templates/divtags/project-content.html
@@ -2,7 +2,7 @@
 
 <!-- <iframe src="{% url 'divtags:sandbox' %}" style="width:100%; height:100%;"></iframe> -->
 
-<div class="container" id="outer-container">
+<div class="container" id="outer-container" style="height:100%">
 
 </div>
 <input id="page-identifier" value="0" type="hidden">
@@ -22,6 +22,6 @@
 	<p>Left: <input class="element-padding" id="element-padding-left" placeholder="Left" value="0"/> px</p>
 	
 	<h4>Colour</h4>
-	<p>Text colour: <span id="element-size-width"></span></p>
-	<p>Background colour: <span id="element-size-height"></span></p>
+	<p>Text: <input id="element-colour-text" type="color" value="#ff0000"/></p>
+ 	<p>Background: <input id="element-colour-background" type="color" value="#ff0000"/></p>
 </div>
