--- a/CS310/divtags/templates/divtags/project.html
+++ b/CS310/divtags/templates/divtags/project.html
@@ -32,10 +32,10 @@
 				<nav class="nav-tree nobottommargin">
 					<ul>
 						<li><a href="#" onclick="addContainer(event);"><i class="icon-line-box"></i>&nbsp;Container</a></li>
-						<li><a href="#"><i class="icon-list-ul"></i>&nbsp;Bulleted List</a></li>
-						<li><a href="#"><i class="icon-list-ol"></i>&nbsp;Numbered List</a></li>
-						<li><a href="#"><i class="">h1</i>&nbsp;Heading</a></li>
-						<li><a href="#"><i class="">T </i>&nbsp;Paragraph</a></li>
+						<li><a href="#" onclick="addBulletList(event);"><i class="icon-list-ul"></i>&nbsp;Bulleted List</a></li>
+						<li><a href="#" onclick="addNumberedList(event);"><i class="icon-list-ol"></i>&nbsp;Numbered List</a></li>
+						<li><a href="#" onclick="addHeading(event);"><i class="">h1</i>&nbsp;Heading</a></li>
+						<li><a href="#" onclick="addParagraph(event);"><i class="">T </i>&nbsp;Paragraph</a></li>
 						<li><a href="#"><i class="icon-photo"></i>&nbsp;Image</a></li>
 						<li><a href="#"><i class="icon-form"></i>&nbsp;Form</a></li>
 						<li><a href="#"><i class="icon-reorder"></i>&nbsp;Menu</a></li>
