CS310-8 database migrated to postgres and JSON objects can be saved

--- a/CS310/divtags/templates/divtags/base.html
+++ b/CS310/divtags/templates/divtags/base.html
@@ -75,7 +75,7 @@
 								</li>
 							
 							
-							<li><a id="save-button" href="#" class="fixedText" onclick="save()">Save</a></li>
+							<li><a id="save-button" href="#" class="fixedText">Save</a></li>
 							<li><a href="#" class="fixedText header-deploy-link">Deploy</a></li>
 							<li id="settings-button"><a class="inactiveLink"><div><i class="icon-settings2"></i></div></a></li>
 						</ul>
