--- a/CS310/divtags/templates/divtags/project-content.html
+++ b/CS310/divtags/templates/divtags/project-content.html
@@ -1,10 +1,11 @@
 {% load static %}
 
-<!-- <iframe src="{% url 'divtags:sandbox' %}" style="width:100%; height:100%;"></iframe> -->
-
+<!-- <iframe src="#" style="width:100%; height:100%;"></iframe> -->
+<div id="json-result" style="display:none;"></div>
 <div class="container" id="outer-container" style="height:100%">
 
 </div>
+
 <input id="page-identifier" value="0" type="hidden">
 <div class="element-editor" id="element-editor" style="display:none;">
 	<h4>Position</h4>
