--- a/CS310/divtags/templates/divtags/project.html
+++ b/CS310/divtags/templates/divtags/project.html
@@ -12,8 +12,8 @@
 			<li id="components-button"><a><i class="icon-code side-panel-trigger"></i><span>Components</span></a></li>
 			<li id="object-button"><a><i class="icon-table"></i><span>Manage Objects</span></a></li>
 			<li id="workflow-button"><a><i class="icon-sitemap"></i><span>Workflow Editor</span></a></li>
-			<li id="settings-side-button"><a><i class="icon-settings2"></i><span>Project Settings</span></a></li>
 			<li id="history-button"><a><i class="icon-book2"></i><span>Application History</span></a></li>
+			<li id="settings-side-button"><a><i class="icon-settings2"></i><span>Project Settings</span></a></li>
 		</ul>
 	</nav>
 </div>
@@ -102,6 +102,7 @@ $("#save-button").on('click', function(event) {
 });
 function create_post() {
     console.log("create post is working!") // sanity check
+    var oldFile = JSON.stringify(Application);
     var file = JSON.stringify(tempApplication);
     $.ajax({
 	    url : "{% url 'divtags:project_save' project.id %}", // the endpoint
@@ -112,7 +113,7 @@ function create_post() {
 	    success : function(json) {
 	        console.log(json); // log the returned json to the console
 	        console.log("success"); // another sanity check
-	        $('#json-result').append(json);
+	        $('#version-table').prepend("<tr><td>" + json.versionNo + "." + json.iterationNo + "</td><td>" + json.datetime + "</td><td><a href=\"/project/restore/" + json.versionid + "/\" >Restore to this version?</a></td></tr>");
 	    },
 	    error : function(xhr,errmsg,err) {
 	    	console.log("FAIL");
