CS310-19 Added in creating experimental branches and merging back

--- a/CS310/divtags/templates/divtags/base.html
+++ b/CS310/divtags/templates/divtags/base.html
@@ -76,7 +76,7 @@
 							
 							
 							<li><a id="save-button" href="#" class="fixedText">Save</a></li>
-							<li><a href="#" class="fixedText header-deploy-link">Deploy</a></li>
+							<li><a id="deploy-button" href="#" class="fixedText header-deploy-link">Deploy</a></li>
 							<li id="settings-button"><a class="inactiveLink"><div><i class="icon-settings2"></i></div></a></li>
 						</ul>
 
