--- a/CS310/divtags/templates/divtags/project-object.html
+++ b/CS310/divtags/templates/divtags/project-object.html
@@ -46,7 +46,7 @@
 			<th></th>
 		</tr>
 	</thead>
-	<tbody>
+	<tbody id="object-table">
 		{% for object in objects %}
 			<tr>
 				<td>{{ object.name }}</td>
